hphp/hack/test/typecheck/reactive/mutability_inout3.php
<?hh // partial

class A {}

<<__Rx>>
function f(<<__OwnedMutable>> inout A $a): void {
}
